[project]
name = "lcstm"
version = "0.1.0"
description = "LLM-based Cross-domain Spatio-Temporal Model"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch>=2.0",
    "numpy",
    "pandas",
    "pyyaml",
    "matplotlib",
    "modelscope",
    "ms-swift",
    "nni>=3.0",
    "muon-optimizer",
    "beartype>=0.18",
    "jaxtyping>=0.2.20",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
nni = [
    "nni",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pyright]
extraPaths = [".venv/lib/python3.11/site-packages"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
ignoreMissingImports = true

[tool.uv.sources]
muon-optimizer = { git = "https://github.com/KellerJordan/Muon" }
